test/files/neg/t1523.check
t1523.scala:4: error: too many arguments (found 26, which exceeds the largest Tuple) for method bug: (x: Any): Any
  def go() = bug("a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a", "a")
                      ^
1 error
